# Bureaucratic-Maze-Navigator

./: .env.example  .gitignore  Dockerfile  README.md  bureaucratic_maze_blog.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py  unsloth_training_script.ipynb  validate-submission.sh
bureaucratic_maze/: __init__.py  departments.py  environment.py  models.py  rewards.py  server.py  tasks.py
server/: app.py
