[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bureaucratic-maze"
version = "1.0.0"
description = "OpenEnv environment: navigate Indian government bureaucracy to accomplish civic goals"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.1",
    "openai>=2.7.2",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27.0"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bureaucratic_maze*", "server*"]
